// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BlogPostPage Snapshots with a color passed in matches snapshot 1`] = `
<main
  class="BlogPost"
>
  <pageheader-stub
    color="blue"
    short="true"
  >
    <template>
      <h1
        role="presentation"
      >
        Feb 17, 2018
      </h1>
    </template>
     
    <template>
      <h2>
        blog post 1 title
      </h2>
    </template>
  </pageheader-stub>
   
  <!---->
</main>
`;

exports[`BlogPostPage Snapshots without a color passed in matches snapshot 1`] = `
<main
  class="BlogPost"
>
  <pageheader-stub
    color="purple"
    short="true"
  >
    <template>
      <h1
        role="presentation"
      >
        Feb 17, 2018
      </h1>
    </template>
     
    <template>
      <h2>
        blog post 1 title
      </h2>
    </template>
  </pageheader-stub>
   
  <!---->
</main>
`;
